Fixed post footer gap

--- a/src/assets/styles/pages/_post.scss
+++ b/src/assets/styles/pages/_post.scss
@@ -41,6 +41,8 @@
         padding-top: 4vh;
 
         &__footer {
+            margin-bottom: -0.1vh;
+
             -webkit-transform: translateX(-35vh);
             -moz-transform:    translateX(-35vh);
             -o-transform:      translateX(-35vh);
